[package]
name = "bmp5"
version = "0.2.2"
edition = "2024"
license = "MPL-2.0"
description = "An embedded_hal_async driver for the BMP5x series of pressure sensors from Bosch Sensortec."

[dependencies]
embedded-hal-async = "1.0.0"
byteorder = { version = "1.5", default-features = false }
defmt = { version = "0.3", optional = true }

[features]
default = []
defmt = ["dep:defmt"]
